# OS-labs

./: CMakeLists.txt  README.md
KP/: CMakeLists.txt  README.md  test.cpp
KP/doc/: кп.docx
KP/include/: graph.h  parser.h
KP/json/: test0.json  test1.json  test2.json  test3.json  test4.json  test5.json
KP/src/: plan.cpp  test.cpp
lab1/doc/: лр1.docx
lab2/: CMakeLists.txt  main.c
lab2/doc/: лр2.docx
lab2/include/: parent.h
lab2/src/: child.c  parent.c
lab3/: main.cpp
lab3/doc/: лр3.docx
lab3/include/: lab3.h  utils.h
lab3/src/: lab3.cpp
lab4/: CMakeLists.txt  main.c
lab4/doc/: лр4.docx
lab4/include/: lab4.h
lab4/src/: lab4.c
lab5/: CMakeLists.txt
lab5/doc/: лр5.docx
lab5/include/: lab5.h
lab5/src/: func1.c  func2.c  prog1.c  prog2.c
lab6-8/: CMakeLists.txt
lab6-8/doc/: лр6-8.docx
lab6-8/include/: node.h
lab6-8/src/: computing.cpp  distribution.cpp
tests/: CMakeLists.txt  lab2_test.cpp  lab3_test.cpp  lab4_test.cpp  lab5_test1.cpp  lab5_test2.cpp
